fix alert banner out of bounds in firefox

--- a/web/public/css/header.less
+++ b/web/public/css/header.less
@@ -75,6 +75,8 @@
 }
 
 .alert-message {
+  display: inline-block;
+  overflow: initial;
 
   &.active {
     min-height: 45px;
